# nnsurrogate

./: .gitignore  .gitmodules
scripts/: Llama_base.sh  Qwen_base.sh  all_experiments_euler_cfl_high.sh  all_experiments_euler_cfl_medium.sh  all_experiments_euler_n_space_high.sh  all_experiments_euler_n_space_medium.sh  all_experiments_heat_n_space_high.sh  all_experiments_heat_n_space_medium.sh  create_individual_csvs_function.py  eval_euler_baselines.sh  eval_euler_methods_iterative.sh  eval_euler_methods_zeroshot.sh  eval_gt.sh  eval_heat_medium.sh  eval_template.sh  eval_template_new.sh  generate.sh  (+14 more)
src/template_trainer/: .gitignore  README.md  __init__.py  environment.yml  pyproject.toml  run_rollout.py  run_train.py
src/template_trainer/dataset/: __init__.py  base.py  generate.py  sim.py
src/template_trainer/dataset/gen_configs/: 1D_heat_transfer_n_space_high.yaml  1D_heat_transfer_n_space_medium.yaml  _euler_1d_cfl_low.yaml  burgers_1d_cfl_high.yaml  euler_1d_cfl_high.yaml  euler_1d_cfl_low.yaml  euler_1d_cfl_medium.yaml  euler_1d_n_space_medium.yaml
src/template_trainer/model/: base.py  sim.py
src/template_trainer/ops/: basic.py
src/template_trainer/train_configs/: 1D_heat_transfer_high_perc.yaml  1D_heat_transfer_large.yaml  euler_1d_cfl_high.yaml  euler_1d_cfl_medium.yaml  euler_1d_cfl_medium_pre.yaml  euler_1d_low.yaml  euler_1d_n_space_medium.yaml  euler_1d_n_space_medium_preprocessed.yaml
src/template_trainer/trainer/: __init__.py  base.py  sim.py
src/template_trainer/utils/: __init__.py  basic.py  dataset_utils.py  metrics.py  normalizer.py
(+42 files in other folders)
